[gd_scene load_steps=40 format=3 uid="uid://i68apaqnq0gt"]

[ext_resource type="Script" path="res://Code/CharacterBody2D.gd" id="1_beck8"]
[ext_resource type="Texture2D" uid="uid://b64trne4b6utb" path="res://Assets/CityPixelBackgrounds/city 4/9.png" id="2_vi0ji"]
[ext_resource type="Texture2D" uid="uid://2ebgwp3msm8n" path="res://Assets/16CatSpritesl.png" id="3_nxhhg"]
[ext_resource type="AudioStream" uid="uid://ci8x5soxc0yk8" path="res://Sounds/kitty-meow-85182.ogg" id="4_36558"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_773pd"]
size = Vector2(16.6667, 24.2498)

[sub_resource type="AtlasTexture" id="AtlasTexture_f8tae"]
atlas = ExtResource("3_nxhhg")
region = Rect2(0, 160, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ljqop"]
atlas = ExtResource("3_nxhhg")
region = Rect2(24, 160, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qu8ws"]
atlas = ExtResource("3_nxhhg")
region = Rect2(48, 160, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dbn8e"]
atlas = ExtResource("3_nxhhg")
region = Rect2(72, 160, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_liboq"]
atlas = ExtResource("3_nxhhg")
region = Rect2(0, 128, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jrasm"]
atlas = ExtResource("3_nxhhg")
region = Rect2(24, 128, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i2dm2"]
atlas = ExtResource("3_nxhhg")
region = Rect2(0, 96, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4pqnl"]
atlas = ExtResource("3_nxhhg")
region = Rect2(24, 96, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g0744"]
atlas = ExtResource("3_nxhhg")
region = Rect2(48, 96, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rdl8f"]
atlas = ExtResource("3_nxhhg")
region = Rect2(72, 96, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_orjjg"]
atlas = ExtResource("3_nxhhg")
region = Rect2(96, 96, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qtbvh"]
atlas = ExtResource("3_nxhhg")
region = Rect2(0, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6phel"]
atlas = ExtResource("3_nxhhg")
region = Rect2(24, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivl8p"]
atlas = ExtResource("3_nxhhg")
region = Rect2(48, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7k41m"]
atlas = ExtResource("3_nxhhg")
region = Rect2(72, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1y1rm"]
atlas = ExtResource("3_nxhhg")
region = Rect2(96, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4oc78"]
atlas = ExtResource("3_nxhhg")
region = Rect2(120, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nmp7u"]
atlas = ExtResource("3_nxhhg")
region = Rect2(0, 64, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ps31"]
atlas = ExtResource("3_nxhhg")
region = Rect2(24, 64, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wvadf"]
atlas = ExtResource("3_nxhhg")
region = Rect2(48, 64, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uy7mv"]
atlas = ExtResource("3_nxhhg")
region = Rect2(72, 64, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_11rn0"]
atlas = ExtResource("3_nxhhg")
region = Rect2(96, 64, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2j2fq"]
atlas = ExtResource("3_nxhhg")
region = Rect2(120, 64, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0ior"]
atlas = ExtResource("3_nxhhg")
region = Rect2(0, 32, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pxiwt"]
atlas = ExtResource("3_nxhhg")
region = Rect2(24, 32, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cr20f"]
atlas = ExtResource("3_nxhhg")
region = Rect2(48, 32, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1jor"]
atlas = ExtResource("3_nxhhg")
region = Rect2(72, 32, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xvm1w"]
atlas = ExtResource("3_nxhhg")
region = Rect2(96, 32, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g8x0b"]
atlas = ExtResource("3_nxhhg")
region = Rect2(120, 32, 24, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_k0q3n"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f8tae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ljqop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qu8ws")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dbn8e")
}],
"loop": true,
"name": &"climb",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_liboq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jrasm")
}],
"loop": true,
"name": &"crouch",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i2dm2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4pqnl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g0744")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rdl8f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_orjjg")
}],
"loop": true,
"name": &"fall",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qtbvh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6phel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivl8p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7k41m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1y1rm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4oc78")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmp7u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ps31")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wvadf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uy7mv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_11rn0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2j2fq")
}],
"loop": true,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0ior")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pxiwt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cr20f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1jor")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xvm1w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g8x0b")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[sub_resource type="Animation" id="Animation_ndxwd"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CleptoSprite2D:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(2.2, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CleptoSprite2D:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(5.38, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_cp8xh"]
resource_name = "jumpSquish"
length = 0.4
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CleptoSprite2D:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(2, -0.25, 0, 0.25, 0, 2.1, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.2, 0.4)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CleptoSprite2D:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(5.58, -0.25, 0, 0.25, 0, 5.48, -0.25, 0, 0.25, 0, 5.58, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.2, 0.4)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qfnwo"]
_data = {
"RESET": SubResource("Animation_ndxwd"),
"jumpSquish": SubResource("Animation_cp8xh")
}

[sub_resource type="Curve" id="Curve_wf17o"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.30303, 1), 0.0, 0.0, 0, 0, Vector2(0.660606, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[node name="Clepto the Cat" type="CharacterBody2D"]
scale = Vector2(2.2, 0.76)
script = ExtResource("1_beck8")

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(0, -150)

[node name="Sprite2D" type="Sprite2D" parent="Camera2D"]
z_index = -100
scale = Vector2(0.3, 1)
texture = ExtResource("2_vi0ji")
offset = Vector2(0, -150)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 11.384)
scale = Vector2(1.41818, 2.53374)
shape = SubResource("RectangleShape2D_773pd")

[node name="CleptoSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 21.0526)
scale = Vector2(2.2, 5.38)
sprite_frames = SubResource("SpriteFrames_k0q3n")
animation = &"idle"

[node name="MeowAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_36558")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qfnwo")
}

[node name="DustParticles" type="CPUParticles2D" parent="."]
position = Vector2(0.454545, 39.4737)
lifetime = 1.2
gravity = Vector2(0, 50)
initial_velocity_min = 40.0
initial_velocity_max = 45.0
angular_velocity_min = -15.0
angular_velocity_max = 15.0
angle_min = 360.0
angle_max = 360.0
scale_amount_min = 2.0
scale_amount_max = 4.0
scale_amount_curve = SubResource("Curve_wf17o")
